# breakfix

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  flake.nix  pyproject.toml  spec.html
breakfix/: artifacts.py  blocks.py  cli.py  graph.py  models.py  nodes.py  runner.py  sandbox_utils.py  state.py
breakfix/agents/: __init__.py  architect.py  builder.py  curator.py  gatekeeper.py  pioneer.py  pruner.py  sniper.py
breakfix/agents/analyst/: __init__.py  agent.py
breakfix/agents/architecture_reviewer/: __init__.py  agent.py
breakfix/agents/crucible/: __init__.py  mutation.py  sentinel.py  verifier.py
breakfix/agents/e2e_builder/: __init__.py  agent.py
breakfix/agents/interface_analyzer/: __init__.py  agent.py
breakfix/distiller/: __init__.py  distiller.py  module_graph.py  symbol_graph.py
breakfix/flows/: __init__.py  crucible_flow.py  project_flow.py  ratchet_flow.py  unit_flow.py
breakfix/tasks/: __init__.py  distillation.py  e2e_builder.py  mutation.py  optimization.py  oracle.py  prototyping.py  ratchet_green.py  ratchet_red.py  refinement.py  scaffold.py  sentinel.py  specification.py
breakfix/tools/: fake_coverage.py  fake_mutation.py
breakfix/workspace/: __init__.py  cleanup.py  copy.py
docs/: ratchet_cycle.md
graph/: graph.py  graph2.py  test_graph.py
tests/test_agents/: test_crucible_mutation.py  test_crucible_sentinel.py  test_crucible_verifier.py  test_oracle.py  test_ratchet_green.py  test_ratchet_red.py
tests/test_distiller/: test_module_graph.py  test_symbol_graph.py
tests/test_workspace/: test_cleanup.py  test_copy.py
(+13 files in other folders)
